crates/forge_services/src/tools/snapshots/forge_services__tools__task_list__tests__pop_back.snap
---
source: crates/forge_services/src/tools/task_list.rs
expression: actual
---
<task_list_result>
<task id="2">
<content>Task 2</content>
<status>InProgress</status>
</task>
<stats>
<total_tasks>2</total_tasks>
<done_tasks>0</done_tasks>
<pending_tasks>1</pending_tasks>
<in_progress_tasks>1</in_progress_tasks>
</stats>
</task_list_result>
